--- a/TweetAndroidApp/app/src/main/res/values/strings.xml
+++ b/TweetAndroidApp/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="at_timestamp">At: %s</string>
     <string name="post_tweet">Post Tweet</string>
     <string name="write_your_tweet_here">Write your tweet here</string>
+    <string name="enter_username">Enter Username</string>
+    <string name="continue_text">Continue</string>
+    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
 </resources>
